--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -17,7 +17,7 @@
             </div>
         {% else %}
             <p>Будь ласка, увійдіть до свого облікового запису.</p>
-            <div style="margin-top: 20px;">
+            <div class="margin-top-20">
                 <form method="get" action="{% url 'login' %}">
                     <button type="submit">Увійти</button>
                 </form>
