--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,16 +1,16 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Register</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-    </head>
+<html>
+<head>
+    <title>User registation</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+</head>
 <body>
-    <h2>Register</h2>
+    <h2>User registation</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Register</button>
+        <button type="submit">register</button>
     </form>
 </body>
 </html>
