--- a/quiz/templates/quiz/home.html
+++ b/quiz/templates/quiz/home.html
@@ -16,9 +16,15 @@
                 </form>
             </div>
         {% else %}
-            <p>Будь ласка, увійдіть до свого облікового запису.</p>
             <div class="margin-top-20">
+                <p>Будь ласка, увійдіть до свого облікового запису.</p>
                 <form method="get" action="{% url 'login' %}">
+                    <button type="submit">Увійти</button>
+                </form>
+            </div>
+            <div style="margin-top: 20px;">
+                <p>Або увійдіть через гугл</p>
+                <form method="get" action="{% url 'social:begin' 'google-oauth2' %}">
                     <button type="submit">Увійти</button>
                 </form>
             </div>
