--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -8,7 +8,8 @@
     <body>
         <!-- <h2>Home</h2> -->
         {% if user.is_authenticated %}
-            <p>Вітаємо, {{ user.username }}!</p>
+            <p>Вітаємоsfdsdfsdf, {{ user.username }}!</p>
+            sdfsdsd
             <div style="margin-top: 20px;">
                 <ul>
                     <li>username - {{ user.username }}</li>
