--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>User registation</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">register</button>
