--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -15,6 +15,8 @@
                     <li>username - {{ user.username }}</li>
                     <li>username - {{ user.first_name }}</li>
                     <li>username - {{ user.last_name }}</li>
+                    <li>username - {{ user.birthday }}</li>
+                    <li>username - {{ user.description }}</li>
                 </ul>
                 {% if user.profile_image %}
                     <img src="{{ user.profile_image.url }}" width="150" height="150">
